Primeira versão site desktop

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 
 			<header class="main-header mobile">
 				<div class="content">
+
 					<nav class="navbar">
+
 						<div class="logo">
 							<img src="assets/logo-cide.png" alt="CIDE">
 						</div>
+
 						<ul class="nav">
 							<li><a href="#vagas">Vagas</a></li>
 							<li><a href="#processos-seletivos">Processos seletivos</a></li>
@@ -31,10 +34,14 @@
 						</ul>
 						<button class="btn login" onclick="window.open('https://cideestagio.conectrh.com.br/', '_blank')">Login</button>
 					</nav>
+
 					<div class="social">
 						<a class="btn-link" href="https://www.facebook.com/cide" target="_blank" class="facebook"><img src="assets/icon-face.png" ></a>
 						<a class="btn-link" href="https://www.instagram.com/cide" target="_blank" class="intagram"><img src="assets/icon-instagram.png" ></a>
 					</div>
+
+					<div class="overlay-img"></div>
+					
 				</div>
 			</header>
 
