Ajustes na versão Desktop

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<article>
 						<p>O <span class="orange-text">CIDE - Capacitação, Inserção e Desenvolvimento</span> é uma organização sem fins lucrativos que, desde 1998, atua na formação, qualificação e inclusão de estudantes e jovens no mercado de trabalho. Promovemos estágios, programas de aprendizagem e ações educativas voltadas ao desenvolvimento social e profissional. Reconhecido como de utilidade pública, o CIDE também está habilitado a prestar serviços e parcerias com órgãos públicos e privados em projetos de relevância social.</p>
 						<div class="img-container">
-							<img src="assets/quemsomos.png" alt="Quem somos">
+							<img src="assets/quem-somos.png"  alt="Rapaz jovem sorrindo e trabalhando em frente a um computador, com caneta na mão fazendo anotações">
 						</div>
 					</article>
 				</section>
@@ -86,13 +86,17 @@
 					<h2 class="text-center">Vagas</h2>
 
 					<!-- foreach -->
-					<div class="card simple-card">
-						<h3>Vaga Estágio</h3>
-						<article class="card-content">
-							<p class="description">Remuneração: R$</p>
-							<p class="local">Salvador - BA</p>
-						</article>
-						<button class="btn card-btn">Ver Oportunidade</button>
+					<div class="flex-container">
+
+						<div class="card simple-card">
+							<h3>Vaga Estágio</h3>
+							<article class="card-content">
+								<p class="description">Remuneração: R$</p>
+								<p class="local">Salvador - BA</p>
+							</article>
+							<button class="btn card-btn">Ver Oportunidade</button>
+						</div>
+
 					</div>
 					<!-- ./ -->
 
@@ -103,13 +107,17 @@
 					<h2 class="text-center">Processos Seletivos</h2>
 
 					<!-- foreach -->
-					<div class="card simple-card">
-						<h3>Processos Seletivos</h3>
-						<article class="card-content">
-							<p class="description">Salário: R$</p>
-							<p class="local">Brasília - DF</p>
-						</article>
-						<button class="btn card-btn">Ver Oportunidade</button>
+					<div class="flex-container">
+
+						<div class="card simple-card">
+							<h3>Processos Seletivos</h3>
+							<article class="card-content">
+								<p class="description">Salário: R$</p>
+								<p class="local">Brasília - DF</p>
+							</article>
+							<button class="btn card-btn">Ver Oportunidade</button>
+						</div>
+					
 					</div>
 					<!-- ./ -->
 				</section>
@@ -137,18 +145,36 @@
 				</section>
 
 				<section id="parcerias" class="container">
-					<div class="box-header">
-						<h2><small>Parceria com a</small><br> Prefeitura de Coruripe/AL</h2>
-						<div class="d-flex">
-							<div class="parceria-img"></div>
-							<div class="subtitle">Programa de Eficientização da Gestão Patrimonial</div>
+
+					<div class="parceria-container mobile">
+						<div class="box-header">
+							<h2><small>Parceria com a</small><br> Prefeitura de Coruripe/AL</h2>
+							<div class="d-flex">
+								<div class="parceria-img"></div>
+								<div class="subtitle">Programa de Eficientização da Gestão Patrimonial</div>
+							</div>
 						</div>
+
+						<article class="text-parcerias">
+							<p><strong>O CIDE Capacitação, Inserção e Desenvolvimento</strong> atua com a <strong>Prefeitura Minicipal de Coruripe/AL</strong> na execução do Programa de Eficientização da Gestão Patrimonial, <strong class="orange-text">com foco em serviços de zeladoria, conservação urbana e apoio à gestão dos bens públicos</strong>.</p>
+							<p>A iniciativa abrange atividades como manutenção de prédios municipais, limpeza de espaços públicos, apoio logistico e organização patrimonial, contribuindo para uma gestão mais eficiente, sustentável e voltada ao bem-estar da população.</p>
+						</article>
 					</div>
 
-					<article class="text-parcerias">
-						<p><strong>O CIDE Capacitação, Inserção e Desenvolvimento</strong> atua com a <strong>Prefeitura Minicipal de Coruripe/AL</strong> na execução do Programa de Eficientização da Gestão Patrimonial, <strong class="orange-text">com foco em serviços de zeladoria, conservação urbana e apoio à gestão dos bens públicos</strong>.</p>
-						<p>A iniciativa abrange atividades como ma-nutenção de prédios municipais, limpeza de espaços públicos, apoio logistico e organi-zação patrimonial, contribuindo para uma gestão mais eficiente, sustentável e voltada ao bem-estar da população.</p>
-					</article>
+					<div class="parceria-container desktop">
+						<article class="text-parcerias">
+							<h2><small>Parceria com a</small><br> Prefeitura de Coruripe/AL</h2>
+							<p><strong>O CIDE — Capacitação, Inserção e Desenvolvimento</strong> atua com a <strong>Prefeitura Minicipal de Coruripe/AL</strong> na execução do Programa de Eficientização da Gestão Patrimonial, <strong class="orange-text">com foco em serviços de zeladoria, conservação urbana e apoio à gestão dos bens públicos</strong>.</p>
+							<p>A iniciativa abrange atividades como manutenção de prédios municipais, limpeza de espaços públicos, apoio logistico e organização patrimonial, contribuindo para uma gestão mais eficiente, sustentável e voltada ao bem-estar da população.</p>
+						</article>
+
+						<div class="box-header">
+							<div class="d-flex">
+								<div class="parceria-img"></div>
+								<div class="subtitle">Programa de Eficientização da Gestão Patrimonial</div>
+							</div>
+						</div>
+					</div>
 
 					<div class="parcerias">
 						<h3>Parcerias</h3>
