Ajustes responsivos do Hero Header

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100..900&display=swap" rel="stylesheet">
-		<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<div class="wrapper">
 
-			<header class="main-header mobile">
+			<header class="main-header responsive">
 				<div class="content">
 
 					<nav class="navbar">
@@ -42,31 +41,6 @@
 
 					<div class="overlay-img"></div>
 					
-				</div>
-			</header>
-
-			<header class="main-header desktop">
-				<div class="container">
-					<div class="header_main-content">
-						<nav class="navbar">
-							<div class="logo">
-								<img src="assets/logo-cide.png" alt="CIDE Logo">
-							</div>
-							<ul class="nav">
-								<li><a href="vagas">Vagas</a></li>
-								<li><a href="#o-que-fazemos">Processos seletivos</a></li>
-								<li><a href="#como-ajudar">Transparência</a></li>
-								<li><a href="#contato">Editais</a></li>
-								<li><a href="#contato">Parcerias</a></li>
-							</ul>
-							<button class="btn login">Login</button>
-						</nav>
-						<div class="social">
-							<a class="btn-link" href="https://www.facebook.com/cide" target="_blank" class="facebook"><img src="assets/icon-face.png" ></a>
-							<a class="btn-link" href="https://www.instagram.com/cide" target="_blank" class="intagram"><img src="assets/icon-instagram.png" ></a>
-						</div>
-					</div>
-					<div class="overlay-img"></div>
 				</div>
 			</header>
 
@@ -210,6 +184,5 @@
 
 		</div>
 		
-		<script src="" async defer></script>
 	</body>
 </html>
