--- a/index.html
+++ b/index.html
@@ -59,20 +59,38 @@
 				<section id="vagas" class="container">
 					<h2 class="text-center">Vagas</h2>
 
-					<!-- foreach -->
 					<div class="flex-container">
 
+						<!-- foreach -->
 						<div class="card simple-card">
-							<h3>Vaga Estágio</h3>
+							<h3>Estágio Nível Médio - Iphan</h3>
 							<article class="card-content">
-								<p class="description">Remuneração: R$</p>
-								<p class="local">Salvador - BA</p>
+								<p class="description">Bolsa Auxílio: R$ 694,36/mês</p>
+								<p class="local">Ouro Preto - MG</p>
 							</article>
 							<button class="btn card-btn">Ver Oportunidade</button>
 						</div>
 
+						<div class="card simple-card">
+							<h3>Estágio em Biblioteconomia - I...</h3>
+							<article class="card-content">
+								<p class="description">Bolsa Auxílio: R$ 1.125,69/mês</p>
+								<p class="local">São Luís - MA</p>
+							</article>
+							<button class="btn card-btn">Ver Oportunidade</button>
+						</div>
+
+						<div class="card simple-card">
+							<h3>Estágio em Direito - Conab DF</h3>
+							<article class="card-content">
+								<p class="description">Bolsa Auxílio: R$ 978,00/mês</p>
+								<p class="local">Brasília - DF</p>
+							</article>
+							<button class="btn card-btn">Ver Oportunidade</button>
+						</div>
+						<!-- ./ -->
+
 					</div>
-					<!-- ./ -->
 
 					<button class="btn more-btn" onclick="window.open('https://cideestagio.conectrh.com.br/p/Vagas/63894819713318914', '_blank')">Ver Mais</button>
 				</section>
@@ -80,20 +98,40 @@
 				<section id="processos-seletivos" class="container">
 					<h2 class="text-center">Processos Seletivos</h2>
 
-					<!-- foreach -->
 					<div class="flex-container">
 
+						<!-- foreach -->
 						<div class="card simple-card">
-							<h3>Processos Seletivos</h3>
+							<h3>ESTÁGIO - TRE ES</h3>
 							<article class="card-content">
-								<p class="description">Salário: R$</p>
+								<p class="description">Salário: R$ 1.100,00/mês</p>
+								<p class="local">Vitória - ES</p>
+							</article>
+							<button class="btn card-btn">Ver Oportunidade</button>
+						</div>
+
+						<div class="card simple-card">
+							<h3>PROCESSO SELETIVO EBC - Empres...</h3>
+							<article class="card-content">
+								<p class="description">Salário: R$ 991,99/mês</p>
 								<p class="local">Brasília - DF</p>
 							</article>
 							<button class="btn card-btn">Ver Oportunidade</button>
 						</div>
+
+						<div class="card simple-card">
+							<h3>PROCESSO SELETIVO DE ESTÁGIO T...</h3>
+							<article class="card-content">
+								<p class="description">Salário: R$ 976,00/mês</p>
+								<p class="local">Vitória - ES</p>
+							</article>
+							<button class="btn card-btn">Ver Oportunidade</button>
+						</div>
+						<!-- ./ -->
 					
 					</div>
-					<!-- ./ -->
+
+					<button class="btn more-btn" onclick="window.open('https://cideestagio.conectrh.com.br/p/Vagas/63894819713318914', '_blank')">Ver Mais</button>
 				</section>
 
 				<section id="transparencia" class="container documents">
