--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				</section>
 
 				<section id="transparencia" class="container documents">
-					<h2 class="text-center">Documentação</h2>
+					<h2 class="text-center">Transparência</h2>
 
 					<div class="flex-grid">
 						<button class="btn-document">
